code for radiobutton style

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,50 +12,52 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="match_parent"
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/white_FFF0F5"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radio_home"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/gray_6c"
-            android:orientation="horizontal"
-            >
-            <RadioButton
-                android:id="@+id/radio_home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:button="@null"
-                android:checked="true"
-                android:text="@string/main_redio_btn_1"
-                android:gravity="center_horizontal|bottom"
-                android:paddingTop="2dp"
-                android:drawableTop="@mipmap/ic_launcher"
-                android:layout_weight="1"/>
-            <RadioButton
-                android:id="@+id/radio_faxian"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:button="@null"
-                android:drawableTop="@mipmap/ic_launcher"
-                android:checked="true"
-                android:text="@string/main_redio_btn_2"
-                android:gravity="center_horizontal|bottom"
-                android:paddingTop="2dp"
-                android:layout_weight="1"/>
-            <RadioButton
-                android:id="@+id/radio_owner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:button="@null"
-                android:drawableTop="@mipmap/ic_launcher"
-                android:checked="true"
-                android:text="@string/main_redio_btn_3"
-                android:gravity="center_horizontal|bottom"
-                android:paddingTop="2dp"
-                android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:button="@null"
+            android:checked="true"
+            android:drawableTop="@drawable/main_btn_home_img"
+            android:gravity="center_horizontal|bottom"
+            android:paddingTop="2dp"
+            android:text="@string/main_redio_btn_1"
+            android:textColor="@drawable/main_btn_textcolor" />
 
-        </RadioGroup>
+        <RadioButton
+            android:id="@+id/radio_faxian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawableTop="@drawable/main_btn_faxian_img"
+            android:gravity="center_horizontal|bottom"
+            android:paddingTop="2dp"
+            android:text="@string/main_redio_btn_2"
+            android:textColor="@drawable/main_btn_textcolor" />
+
+        <RadioButton
+            android:id="@+id/radio_owner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawableTop="@drawable/main_btn_owner_img"
+            android:gravity="center_horizontal|bottom"
+            android:paddingTop="2dp"
+            android:text="@string/main_redio_btn_3"
+            android:textColor="@drawable/main_btn_textcolor" />
+    </RadioGroup>
 </LinearLayout>
