--- a/app/src/main/res/layout/fragment_owner.xml
+++ b/app/src/main/res/layout/fragment_owner.xml
@@ -41,6 +41,7 @@
         android:layout_centerHorizontal="true"/>
 
     <TextView
+        android:id="@+id/tv_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
