--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,11 @@
     <color name="gray_6c">#6c6c6c</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="gray_dc">#DCDCDC</color>
+    <color name="black_30">#303030</color>
 
     <color name="white_FFF0F5">#FFF0F5</color>
+
+    <color name="blue">#BF3EFF</color>
 
 </resources>
