--- a/app/src/main/res/layout/fragment_owner.xml
+++ b/app/src/main/res/layout/fragment_owner.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="100dp"
         android:text="@string/owner_title"
         android:textColor="@color/white"
-        android:textSize="60sp" />
+        android:textSize="40sp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,6 +35,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_registe"
+        android:textSize="18sp"
         android:layout_marginTop="300dp"
         android:textColor="@drawable/btn_textcolor_style"
         android:background="@drawable/btn_background_style"
