--- a/app/src/main/res/layout/activity_account_login.xml
+++ b/app/src/main/res/layout/activity_account_login.xml
@@ -66,6 +66,7 @@
             android:hint="@string/login_username_hint"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:singleLine="true"
             android:textColor="@color/gray_6c"
             android:textColorHint="@color/gray_dc" />
 
@@ -88,6 +89,7 @@
                 android:inputType="textPassword"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
+                android:singleLine="true"
                 android:textColor="@color/gray_6c"
                 android:textColorHint="@color/gray_dc" />
 
