--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="white_FFF0F5">#FFF0F5</color>
 
     <color name="blue">#BF3EFF</color>
+    <color name="red">#8B7500</color>
 
 </resources>
