--- a/app/src/main/res/layout/activity_account_login.xml
+++ b/app/src/main/res/layout/activity_account_login.xml
@@ -7,35 +7,27 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/white">
-
-        <ImageView
-            android:id="@+id/img_back"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/btn_arrow_left_blue" />
-
+        android:paddingTop="10dp"
+        android:background="@color/white"
+        android:paddingBottom="10dp"
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
             android:text="@string/login_btn_text"
+            android:layout_centerInParent="true"
+            android:textSize="18sp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:layout_height="wrap_content"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/img_setting"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:paddingRight="10dp"
-            android:text="@string/text_ok"
-            android:textColor="@color/blue"
-            android:textSize="20sp" />
+            android:layout_marginRight="10dp"
+            android:background="@mipmap/ic_settings_black_48dp"/>
+
     </RelativeLayout>
 
 
@@ -94,6 +86,7 @@
                 android:textColorHint="@color/gray_dc" />
 
             <ImageView
+                android:id="@+id/img_pwd_visible"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentRight="true"
@@ -115,122 +108,37 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="10dp"
-        android:textColor="@color/white"
-        android:textSize="18sp"
         android:background="@drawable/btn_login_style"
-        android:text="@string/login_btn_text" />
+        android:text="@string/login_btn_text"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/tv_foeget_pwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:text="@string/login_pwd_forget"
-        android:textColor="@color/blue" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_gravity="center_vertical">
 
         <TextView
+            android:id="@+id/tv_foeget_pwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="@string/login_other_account_subtitle"
-            android:textColor="@color/gray_6c"
-            android:textSize="18sp" />
+            android:padding="10dp"
+            android:layout_marginLeft="60dp"
+            android:text="@string/login_pwd_forget"
+            android:textColor="@color/blue" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray_dc" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <LinearLayout
-                android:id="@+id/layout_sina"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@mipmap/icon_sina" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/social_account_sina"
-                    android:textColor="@color/black_30" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layout_qq"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@mipmap/icon_qq" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/social_account_qq"
-                    android:textColor="@color/black_30" />
-            </LinearLayout>
+        <TextView
+            android:id="@+id/tv_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="10dp"
+            android:layout_marginRight="60dp"
+            android:text="@string/btn_registe"
+            android:textColor="@color/blue" />
 
 
-            <LinearLayout
-                android:id="@+id/layout_weixin"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@mipmap/icon_weixin" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="@string/social_account_weixin"
-                    android:textColor="@color/black_30" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray_dc" />
-
-
-    </LinearLayout>
-
+    </RelativeLayout>
 
 </LinearLayout>
