--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/white"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:paddingTop="10dp"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
         android:paddingBottom="10dp"
-        android:layout_height="wrap_content">
+        android:paddingTop="10dp">
+
         <TextView
             android:layout_width="wrap_content"
-            android:text="每日精选"
-            android:layout_centerInParent="true"
-            android:textSize="18sp"
-            android:textColor="@color/black"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="每日精选"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/id_swipe_ly"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/id_swipe_ly"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <ListView
-                android:id="@+id/id_listview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-            </ListView>
-        </android.support.v4.widget.SwipeRefreshLayout>
+        <ListView
+            android:id="@+id/id_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 </LinearLayout>
