--- a/app/src/main/res/drawable/btn_background_style.xml
+++ b/app/src/main/res/drawable/btn_background_style.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:state_pressed="false">
         <shape>
-            <stroke android:width="1dip" android:color="@color/white" />
+            <stroke android:width="1dip" android:color="@color/gray_6c" />
             <corners android:radius="5dip" />
         </shape>
     </item>
