--- a/app/src/main/res/layout/fragment_owner.xml
+++ b/app/src/main/res/layout/fragment_owner.xml
@@ -2,53 +2,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A3A3A3">
+    android:background="@color/white">
 
     <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
-        android:src="@mipmap/ic_settings_black_48dp" />
+        android:id="@+id/img_icon"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:background="@mipmap/du_dress_icon_108" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/img_icon"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:text="@string/owner_title"
-        android:textColor="@color/white"
-        android:textSize="40sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
         android:text="@string/owner_subtitle"
-        android:textColor="@color/white"
+        android:textColor="@color/gray_6c"
         android:textSize="18sp" />
 
     <Button
         android:id="@+id/btn_registe"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="@string/btn_registe"
-        android:textSize="18sp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="300dp"
-        android:textColor="@drawable/btn_textcolor_style"
         android:background="@drawable/btn_background_style"
-        android:layout_centerHorizontal="true"/>
+        android:text="@string/btn_registe"
+        android:textColor="@drawable/btn_textcolor_style"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/white"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/btn_registe"
-        android:text="@string/owner_has_account"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="@string/owner_has_account"
+        android:textColor="@color/gray_6c" />
 
 </RelativeLayout>
