发现一个极度简单的设计稿 登陆页面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="blue">#BF3EFF</color>
     <color name="red">#8B7500</color>
 
+    <color name="white_f2">#F2F2F2</color>
+
 </resources>
