LoginActivity and SignupActivity

--- a/app/src/main/res/layout/activity_account_login_1.xml
+++ b/app/src/main/res/layout/activity_account_login_1.xml
@@ -6,17 +6,20 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <include layout="@layout/layout_head" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/ed_username"
+            android:id="@+id/ed_email"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@color/white"
+            android:singleLine="true"
             android:gravity="center"
             android:hint="邮件" />
 
@@ -27,6 +30,7 @@
             android:layout_marginTop="2dp"
             android:background="@color/white"
             android:gravity="center"
+            android:singleLine="true"
             android:hint="密码" />
     </LinearLayout>
 
@@ -44,7 +48,8 @@
         android:background="@color/gray_dc"
         android:padding="10dp"
         android:text="@string/login_btn_text"
-        android:id="@+id/btn_login" />
+        android:id="@+id/btn_login"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tv_register"
