--- a/app/src/main/res/layout/layout_head.xml
+++ b/app/src/main/res/layout/layout_head.xml
@@ -20,7 +20,7 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="title"
+            android:text="返回"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"/>
